# crosstalk

./: CMakeLists.txt  README.md  build.py
include/crosstalk/: crosstalker.hpp  endian.hpp  serial_abstraction.hpp
include/crosstalk/serial_abstractions/: crosstalk_lib_serial_wrapper.hpp  crosstalk_teensy_usb_serial_wrapper.hpp  crosstalk_teensyduino_usb_serial_wrapper.hpp
test/: test_esp32.cpp  test_objects.hpp  test_serial_communicator.cpp
test/esp_test_firmware/: platformio.ini
test/esp_test_firmware/src/: main.cpp
